# third_party_cups

./: BUILD.gn  OAT.xml  README.OpenSource  README.md  README_ZH.md  README_zh.md  backport-0001-CVE-2024-47175.patch  backport-0002-CVE-2024-47175.patch  backport-0003-CVE-2024-47175.patch  backport-0004-CVE-2024-47175.patch  backport-0005-CVE-2024-47175.patch  backport-CVE-2023-4504.patch  backport-CVE-2025-59364.patch  backport-Fix-CVE-2024-35235-regression.patch  backport-Fix-CVE-2024-35235.patch  backport-Fix-memory-leak-in-cupsConvertOption.patch  backport-delay-creating-driverless-printer-until-ppd-generated.patch  bundle.json  config.h  cups-log-datamasking.patch  cups-lspp.patch  cups-usb-job-state-monitor.patch  cups.gni  cups.spec  cups.yaml  cups_simgle_file.patch  generate_mime_convs.py  install.py  install.sh  ohos-add-openssl.patch  ohos-cloud-pagesize-error-fix.patch  ohos-cups-badfd.patch  ohos-default-paper-size.patch  ohos-filetypes-crash.patch  ohos-fix-buffer-overread.patch  ohos-fix-classes-uaf.patch  ohos-fix-integer-overflow.patch  ohos-fix-ipp-no-members.patch  ohos-fix-job-uuid-heap-overflow.patch  ohos-fix-snmp-overread.patch  (+20 more)
backend/: ipp.c  ipp.c.rej  usb-oh.c  usb.c  usb.c.rej  usb_manager.cxx  usb_manager.h  virtual-printer.c  virtual-printer.ppd
cups/: http-addrlist.c  http-addrlist.c.rej  http-support.c  http-support.c.rej  http.c  http.c.rej  http.h  http.h.rej  ppd-cache.c  ppd-cache.c.rej  thread.c  thread.c.rej
move_files/: smb.cpp  smb_log.h  smb_spool.cpp  smb_spool.h  uri_processor.cpp  uri_processor.h  usb_ipp_manager.cpp  usb_ipp_manager.h  usb_monitor.cpp  usb_monitor.h  virtual-printer.c  virtual-printer.cpp  virtual-printer.ppd
packaging/: cups.spec
patches/: patches.json
scheduler/: conf.c  env.c  env.c.rej  hilog-helper.c  hilog-helper.h  ipp.c  ipp.c.rej  job.c  job.c.rej  log.c  log.c.rej  statbuf.c  statbuf.h  statbuf.h.rej
tools/: ippeveprinter.c  ippeveprinter.c.rej
